sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: value >- is not a member of Int
    while(j>-1){
           ^